--- a/app/views/add-product/brand-search.html
+++ b/app/views/add-product/brand-search.html
@@ -33,7 +33,7 @@
           isPageHeading: false
         },
         classes: "govuk-input--width-20",
-        id: "brand",
+        id: "brand-search",
         name: "brand",
         value: data['brand']
       }) }}
