--- a/app/views/add-product/product-category.html
+++ b/app/views/add-product/product-category.html
@@ -30,8 +30,9 @@
             text: "Be specific, for example, ‘washing machine’ or ‘board game’ rather than ‘household appliance or ‘toy’"
           },
           classes: "govuk-input--width-20",
-          id: "category",
-          name: "category"
+          id: "product-category",
+          name: "product-category",
+          value: data['product-category']
         }) }}
 
         {{ govukButton({
