--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,6 +15,7 @@
 
       <ol class="govuk-list govuk-list--number">
         <li><a class="govuk-link" href="/add-product/counterfeit">Add product</a></li>
+        <li><a class="govuk-link" href="/product-categoriser">Product categoriser</a></li>
       </ol>
 
     </div>
