--- a/app/views/index.html
+++ b/app/views/index.html
@@ -14,8 +14,8 @@
       </h1>{{releaseVersion | log }}
 
       <ol class="govuk-list govuk-list--number">
-        <li><a class="govuk-link" href="/add-product/counterfeit">Add product</a></li>
-        <li><a class="govuk-link" href="/product-categoriser">Product categoriser</a></li>
+        <li><a class="govuk-link" href="/add-product/counterfeit">Add Product</a></li>
+        <li><a class="govuk-link" href="/product-categoriser">Product Categoriser</a></li>
       </ol>
 
     </div>
