--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
       <h1 class="govuk-heading-xl">
-        Prototypes
+        PSD Prototype
       </h1>{{releaseVersion | log }}
 
       <ol class="govuk-list govuk-list--number">
@@ -18,6 +18,12 @@
         <li><a class="govuk-link" href="/product-categoriser">Product Categoriser</a></li>
       </ol>
 
+
+      <span class="govuk-caption-m">Design changes from Nov 2020 onwards </span>
+      <ol class="govuk-list govuk-list--number">
+        <li><a class="govuk-link" href="#"></a> WIP 1</li>
+        <li><a class="govuk-link" href="#"></a> WIP 2</li>
+      </ol>
     </div>
   </div>
 
