--- a/app/views/index.html
+++ b/app/views/index.html
@@ -8,7 +8,7 @@
 {% block content %}
 
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-two-thirds govuk-!-padding-bottom-9">
       <h1 class="govuk-heading-xl">
         PSD Prototype
       </h1>{{releaseVersion | log }}
@@ -24,6 +24,21 @@
         <li><a class="govuk-link" href="#"></a> WIP 1</li>
         <li><a class="govuk-link" href="#"></a> WIP 2</li>
       </ol>
+
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
+
+      <h2 class="govuk-heading-l">Darren's designs &hellip;</h2>
+      <ol class="govuk-list govuk-list--bullet">
+        <li><a class="govuk-link" href="/add-product-v4/start.html">Add Product v4 designs</a></li>
+
+          <ol class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
+            <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-02.html">Choose a product list 02 (with images)</a></li>
+            <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-03.html">Choose a product list 03 (HTML list, with images)</a></li>
+          </ol>
+
+      </ol>
+
     </div>
   </div>
 
