amends to select-product lists

--- a/app/views/add-product-v4/choose-a-product-list-01.html
+++ b/app/views/add-product-v4/choose-a-product-list-01.html
@@ -17,7 +17,7 @@
     <div class="govuk-grid-column-full">
 
 
-        <form class="form" action="#" method="post">
+        <form class="form" action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="product-hint">
 
