--- a/app/views/add-product-v4/select-a-product-list-04.html
+++ b/app/views/add-product-v4/select-a-product-list-04.html
@@ -1,7 +1,7 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    03. Choose a product
+    04. Select a product
 {% endblock %}
 
 {% block beforeContent %}
@@ -39,6 +39,7 @@
                         <div class="govuk-grid-column-three-quarters">
                             <ul class="govuk-list govuk-radios govuk-radios--small govuk-list--spaced">
                                 <li>
+
                                     <div  class="govuk-radios__item">
                                         <input class="govuk-radios__input" id="product-item-01" name="product-item" type="radio" value="government-gateway" aria-describedby="product-item-01-hint">
                                         <label class="govuk-label govuk-radios__label" for="product-item-01">
@@ -46,21 +47,6 @@
                                         </label>
                                         <div id="product-item-01-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-left-6 govuk-!-margin-bottom-0">
                                             Personal protective equipment (PPE), Face covering and UKCA, CE markings.
-                                        </div>
-                                    </div>
-
-                                    <div class="govuk-grid-row govuk-!-margin-left-8">
-                                        <div class="govuk-grid-column-full">
-                                            <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
-                                                <summary class="govuk-details__summary">
-                                                    <span class="govuk-details__summary-text govuk-!-font-size-16">
-                                                        Product image <span class="govuk-visually-hidden">of Hyper Clean Series 1000 masks</span>
-                                                    </span>
-                                                </summary>
-                                                <div class="govuk-details__text">
-                                                    <img src="../public/images/mask.jpg" class="psd-details-img" alt="Series 1000 masks">
-                                                </div>
-                                            </details>
                                         </div>
                                     </div>
 
@@ -77,21 +63,6 @@
                                         </div>
                                     </div>
 
-                                    <div class="govuk-grid-row govuk-!-margin-left-8">
-                                        <div class="govuk-grid-column-full">
-                                            <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
-                                                <summary class="govuk-details__summary">
-                                                    <span class="govuk-details__summary-text govuk-!-font-size-16">
-                                                        Product image <span class="govuk-visually-hidden">of Dyson Supersonic</span>
-                                                    </span>
-                                                </summary>
-                                                <div class="govuk-details__text">
-                                                    <img src="../public/images/extension-lead.jpg" class="psd-details-img" alt="Supersonic">
-                                                </div>
-                                            </details>
-                                        </div>
-                                    </div>
-
                                 </li>
                                 <li>
 
@@ -105,10 +76,6 @@
                                         </div>
                                     </div>
 
-                                    <details class="govuk-visually-hidden">
-                                        <summary>There is no associated Honda product image</summary>
-                                    </details>
-
                                 </li>
                                 <li>
 
@@ -119,21 +86,6 @@
                                         </label>
                                         <div id="product-item-04-hint" class="govuk-hint govuk-radios__hint govuk-!-font-size-16 govuk-!-margin-left-6 govuk-!-margin-bottom-0">
                                             Electrical equipment (SKKR), Radios and CE markings.
-                                        </div>
-                                    </div>
-
-                                    <div class="govuk-grid-row govuk-!-margin-left-8">
-                                        <div class="govuk-grid-column-full">
-                                            <details class="govuk-details govuk-!-margin-bottom-0" data-module="govuk-details">
-                                                <summary class="govuk-details__summary">
-                                                    <span class="govuk-details__summary-text govuk-!-font-size-16">
-                                                        Product image <span class="govuk-visually-hidden">Panasonic - Super Fast XD</span>
-                                                    </span>
-                                                </summary>
-                                                <div class="govuk-details__text">
-                                                    <img src="../public/images/hair-spray.jpg" class="psd-details-img" alt="Super Fast XD">
-                                                </div>
-                                            </details>
                                         </div>
                                     </div>
 
