--- a/app/views/add-product-v4/choose-a-product-list-02.html
+++ b/app/views/add-product-v4/choose-a-product-list-02.html
@@ -17,7 +17,7 @@
     <div class="govuk-grid-column-full">
 
 
-        <form class="form" action="#" method="post">
+        <form class="form" action="#" method="post" novalidate>
             <div class="govuk-form-group">
                 <fieldset class="govuk-fieldset" aria-describedby="product-hint">
 
@@ -48,16 +48,16 @@
 
                         <div class="govuk-grid-row govuk-!-margin-left-4">
                             <div class="govuk-grid-column-full">
-                            <details class="govuk-details" data-module="govuk-details">
-                                <summary class="govuk-details__summary">
-                                    <span class="govuk-details__summary-text govuk-!-font-size-16">
-                                        Product image <span class="govuk-visually-hidden">of Hyper Clean Series 1000 masks</span>
-                                    </span>
-                                </summary>
-                                <div class="govuk-details__text">
-                                    <img src="../public/images/mask.jpg" class="psd-details-img" alt="Series 1000 masks">
-                                </div>
-                            </details>
+                                <details class="govuk-details" data-module="govuk-details">
+                                    <summary class="govuk-details__summary">
+                                        <span class="govuk-details__summary-text govuk-!-font-size-16">
+                                            Product image <span class="govuk-visually-hidden">of Hyper Clean Series 1000 masks</span>
+                                        </span>
+                                    </summary>
+                                    <div class="govuk-details__text">
+                                        <img src="../public/images/mask.jpg" class="psd-details-img" alt="Series 1000 masks">
+                                    </div>
+                                </details>
                             </div>
                         </div>
 
@@ -73,28 +73,33 @@
 
                         <div class="govuk-grid-row govuk-!-margin-left-4">
                             <div class="govuk-grid-column-full">
-                            <details class="govuk-details" data-module="govuk-details">
-                                <summary class="govuk-details__summary">
-                                    <span class="govuk-details__summary-text govuk-!-font-size-16">
-                                        Product image <span class="govuk-visually-hidden">of Dyson Supersonic</span>
-                                    </span>
-                                </summary>
-                                <div class="govuk-details__text">
-                                    <img src="../public/images/extension-lead.jpg" class="psd-details-img" alt="Supersonic">
-                                </div>
-                            </details>
+                                <details class="govuk-details" data-module="govuk-details">
+                                    <summary class="govuk-details__summary">
+                                        <span class="govuk-details__summary-text govuk-!-font-size-16">
+                                            Product image <span class="govuk-visually-hidden">of Dyson Supersonic</span>
+                                        </span>
+                                    </summary>
+                                    <div class="govuk-details__text">
+                                        <img src="../public/images/extension-lead.jpg" class="psd-details-img" alt="Supersonic">
+                                    </div>
+                                </details>
                             </div>
                         </div>
 
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="product-item-03" name="product-item" type="radio" value="government-gateway" aria-describedby="product-item-03-hint">
                             <label class="govuk-label govuk-radios__label" for="product-item-03">
-                                The product brand - the product name
+                                Honda - Series 1000 XK
                             </label>
                             <div id="product-item-03-hint" class="govuk-hint govuk-radios__hint">
                                 Category - Personal protective equipment (PPE), Subcategory - safety equipment, Product Markings - UKCA, CE, EUXX
                             </div>
                         </div>
+
+                        <details class="govuk-visually-hidden">
+                            <summary>There is no associated Honda product image</summary>
+                        </details>
+
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="product-item-04" name="product-item" type="radio" value="government-gateway" aria-describedby="product-item-04-hint">
                             <label class="govuk-label govuk-radios__label" for="product-item-04">
@@ -107,16 +112,16 @@
 
                         <div class="govuk-grid-row govuk-!-margin-left-4">
                             <div class="govuk-grid-column-full">
-                            <details class="govuk-details" data-module="govuk-details">
-                                <summary class="govuk-details__summary">
-                                    <span class="govuk-details__summary-text govuk-!-font-size-16">
-                                        Product image <span class="govuk-visually-hidden">Panasonic - Super Fast XD</span>
-                                    </span>
-                                </summary>
-                                <div class="govuk-details__text">
-                                    <img src="../public/images/hair-spray.jpg" class="psd-details-img" alt="Super Fast XD">
-                                </div>
-                            </details>
+                                <details class="govuk-details" data-module="govuk-details">
+                                    <summary class="govuk-details__summary">
+                                        <span class="govuk-details__summary-text govuk-!-font-size-16">
+                                            Product image <span class="govuk-visually-hidden">Panasonic - Super Fast XD</span>
+                                        </span>
+                                    </summary>
+                                    <div class="govuk-details__text">
+                                        <img src="../public/images/hair-spray.jpg" class="psd-details-img" alt="Super Fast XD">
+                                    </div>
+                                </details>
                             </div>
                         </div>
 
