--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,6 +35,7 @@
             <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
             <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-02.html">Choose a product list 02 (with images)</a></li>
             <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-03.html">Choose a product list 03 (HTML list, with images)</a></li>
+            <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-03.html">Select a product list 04 (HTML list, without images)</a></li>
           </ol>
 
       </ol>
