wip on search cosmetics pg

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,18 +27,32 @@
 
       <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible">
 
-      <h2 class="govuk-heading-l">Darren's designs &hellip;</h2>
-      <ol class="govuk-list govuk-list--bullet">
+      <h1 class="govuk-heading-l">Darren &hellip;</h1>
+
+      <h2 class="govuk-heading-m"><abbr>PSD</abbr> designs</h2>
+      <ul class="govuk-list govuk-list--bullet">
         <li><a class="govuk-link" href="/add-product-v4/start.html">Add Product v4 designs</a></li>
 
-          <ol class="govuk-list govuk-list--bullet">
+          <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
             <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-02.html">Choose a product list 02 (with images)</a></li>
             <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-03.html">Choose a product list 03 (HTML list, with images)</a></li>
-            <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-03.html">Select a product list 04 (HTML list, without images)</a></li>
-          </ol>
+            <li><a class="govuk-link" href="/add-product-v4/select-a-product-list-04.html">Select a product list 04 (HTML list, without images)</a></li>
+          </ul>
 
-      </ol>
+      </ul>
+
+      <h2 class="govuk-heading-m"><abbr>SCNP</abbr>/Cosmetics designs</h2>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a class="govuk-link" href="#">Cosmentics flow</a></li>
+
+          <ul class="govuk-list govuk-list--bullet">
+            <li><a class="govuk-link" href="/cosmetics-search-designs/search-page-01.html">#1132 Search page design</a></li>
+
+          </ul>
+
+      </ul>
+
 
     </div>
   </div>
