--- a/app/views/layout-01.html
+++ b/app/views/layout-01.html
@@ -40,7 +40,7 @@
   {# Set serviceName in config.js. #}
   {{ govukHeader({
     homepageUrl: "/index.html",
-    serviceName: "PSD prototype",
+    serviceName: "Prototype",
     serviceUrl: "/",
     containerClasses: "govuk-width-container"
   }) }}
