--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -30,3 +30,33 @@ $govuk-assets-path: '/govuk/assets/';
 ul.govuk-radios.govuk-list--spaced li {
     @include govuk-clearfix;
 }
+
+
+// new bespoke .scnp css styles, start here...
+.scnp-search__wrapper {
+    .govuk-button {
+        border: 2px solid govuk-colour("black");
+        box-shadow: 0 0 0;
+        border-left: 0;
+        width: 40px;
+        height: 40px;
+        background-image: url(../images/search-button-icon.png);
+        background-repeat: no-repeat;
+        background-position: 2px 50%;
+        background-color: govuk-colour("blue");
+
+        &:hover {
+            background-color: govuk-colour("dark-blue");
+        }
+        &:focus:not(:hover),
+        &:active{
+            outline: 3px solid govuk-colour("yellow");
+            outline-offset: 0;
+            box-shadow: inset 0 0 0 3px govuk-colour("black");
+            background-color: govuk-colour("dark-blue");
+            top: 0;
+        }
+    }
+
+}
+
