--- a/app/views/add-product-v4/choose-a-product-list-02.html
+++ b/app/views/add-product-v4/choose-a-product-list-02.html
@@ -55,7 +55,7 @@
                                         </span>
                                     </summary>
                                     <div class="govuk-details__text">
-                                        <img src="../public/images/mask.jpg" class="psd-details-img" alt="Series 1000 masks">
+                                        <img src="../public/images/mask.jpg" class="opss-details-img" alt="Series 1000 masks">
                                     </div>
                                 </details>
                             </div>
@@ -80,7 +80,7 @@
                                         </span>
                                     </summary>
                                     <div class="govuk-details__text">
-                                        <img src="../public/images/extension-lead.jpg" class="psd-details-img" alt="Supersonic">
+                                        <img src="../public/images/extension-lead.jpg" class="opss-details-img" alt="Supersonic">
                                     </div>
                                 </details>
                             </div>
@@ -119,7 +119,7 @@
                                         </span>
                                     </summary>
                                     <div class="govuk-details__text">
-                                        <img src="../public/images/hair-spray.jpg" class="psd-details-img" alt="Super Fast XD">
+                                        <img src="../public/images/hair-spray.jpg" class="opss-details-img" alt="Super Fast XD">
                                     </div>
                                 </details>
                             </div>
