--- a/app/views/index.html
+++ b/app/views/index.html
@@ -34,9 +34,9 @@
         <li><a class="govuk-link" href="/add-product-v4/start.html">Add Product v4 designs</a></li>
 
           <ul class="govuk-list govuk-list--bullet">
-            <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
-            <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-02.html">Choose a product list 02 (with images)</a></li>
-            <li><a class="govuk-link" href="/add-product-v4/choose-a-product-list-03.html">Choose a product list 03 (HTML list, with images)</a></li>
+            <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-01.html">Choose a product list 01 (without images)</a></li>
+            <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-02.html">Choose a product list 02 (with images)</a></li>
+            <li><a class="govuk-link strike" href="/add-product-v4/choose-a-product-list-03.html">Choose a product list 03 (HTML list, with images)</a></li>
             <li><a class="govuk-link" href="/add-product-v4/select-a-product-list-04.html">Select a product list 04 (HTML list, without images)</a></li>
           </ul>
 
