--- a/app/views/add-product-v4/choose-a-product-list-03.html
+++ b/app/views/add-product-v4/choose-a-product-list-03.html
@@ -58,7 +58,7 @@
                                                     </span>
                                                 </summary>
                                                 <div class="govuk-details__text">
-                                                    <img src="../public/images/mask.jpg" class="psd-details-img" alt="Series 1000 masks">
+                                                    <img src="../public/images/mask.jpg" class="opss-details-img" alt="Series 1000 masks">
                                                 </div>
                                             </details>
                                         </div>
@@ -86,7 +86,7 @@
                                                     </span>
                                                 </summary>
                                                 <div class="govuk-details__text">
-                                                    <img src="../public/images/extension-lead.jpg" class="psd-details-img" alt="Supersonic">
+                                                    <img src="../public/images/extension-lead.jpg" class="opss-details-img" alt="Supersonic">
                                                 </div>
                                             </details>
                                         </div>
@@ -131,7 +131,7 @@
                                                     </span>
                                                 </summary>
                                                 <div class="govuk-details__text">
-                                                    <img src="../public/images/hair-spray.jpg" class="psd-details-img" alt="Super Fast XD">
+                                                    <img src="../public/images/hair-spray.jpg" class="opss-details-img" alt="Super Fast XD">
                                                 </div>
                                             </details>
                                         </div>
