--- a/app/views/add-product-v4/snippets.html
+++ b/app/views/add-product-v4/snippets.html
@@ -63,3 +63,10 @@ govuk-!-display-none-print
 .app-task-list__item:first-child {
   border-top: 1px solid $govuk-border-colour;
 }
+
+
+
+$until
+
+
+                <a class="govuk-link govuk-link--no-visited-state" id="dates-clear" href="#">Clear filters</a>
