--- a/app/views/cosmetics-search-designs/search-page-01.html
+++ b/app/views/cosmetics-search-designs/search-page-01.html
@@ -80,8 +80,8 @@
                             <div class="govuk-form-group">
 
                                 <div id="by-date-hint" class="govuk-hint govuk-!-font-size-16">
-                                    The notified date<span class="govuk-visually-hidden">:</span> <br>
-                                    For example, 12 08 2019
+                                    The notified date. <br>
+                                    For example, 12 08 2019.
                                 </div>
 
                                 <div class="govuk-date-input" id="by-date">
@@ -124,7 +124,7 @@
                             <div class="govuk-form-group">
 
                                 <div id="by-date-range-hint" class="govuk-hint govuk-!-font-size-16">
-                                    The notified dates within a date range. For example, from <span class="opss-no-wrap">01 04 2019</span> to <span class="opss-no-wrap">31 03 2020</span><span class="govuk-visually-hidden">.</span>
+                                    The notified dates within a date range. For example, from <span class="opss-no-wrap">01 04 2019</span> to <span class="opss-no-wrap">31 03 2020</span>.
                                 </div>
                                 <div class="govuk-hint govuk-!-font-size-16">
                                     From<span class="govuk-visually-hidden">:</span>
@@ -194,11 +194,13 @@
             </div>
 
             <div class="govuk-button-group">
-                <button class="govuk-button" data-module="govuk-button">
+                <button type="submit" class="govuk-button" data-module="govuk-button">
                     Apply
                 </button>
 
-                <a class="govuk-link govuk-link--no-visited-state" id="dates-clear" href="#">Clear</a>
+                <button type="reset" class="govuk-button opss-button-link" data-module="govuk-button">
+                    Clear filters
+                </button>
             </div>
 
         </form>
@@ -207,21 +209,18 @@
     <section class="govuk-grid-column-two-thirds" id="search-results-section">
         <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds">
-               <p class="govuk-body">19 products matching keyword(s) <span class="govuk-!-font-weight-bold">dye, hairspray</span>, were found.</p>
-                <!-- the above statement only works if we know which keywords impacted upon the results (and we only list those keywords here) -->
-
-               <!--p class="govuk-body">19 product matches were found.</p>
-               <p class="govuk-body">19 product notifications were found.</p-->
+               <p class="govuk-body">19 products matching keyword(s)
+                   <span class="govuk-!-font-weight-bold">dye, hairspray</span>,<span id="opss-filter-txt" class="opss-filter-txt"> and using the current filters,</span> were found.</p>
            </div>
            <div class="govuk-grid-column-one-third">
-               <div class="govuk-form-group">
+               <div class="govuk-form-group opss-float-right">
                    <form class="form" action="#" method="post">
                         <label class="govuk-label govuk-body-s" for="results-sort">
                             Sort by
                         </label>
                         <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort">
                             <option value="relevance" selected>Relevance</option>
-                            <option value="recent">Most recent</option>
+                            <option value="recent">Newest</option>
                             <option value="oldest">Oldest</option>
                         </select>
                         <button class="govuk-button opss-js-enabled-hidden" data-module="govuk-button">
@@ -234,7 +233,7 @@
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-full">
-                <ul class="govuk-list">
+                <ul class="govuk-list opss-list--borders">
 
                     <li>
                         <h2 class="govuk-heading-s">
