--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -125,6 +125,10 @@ $govuk-assets-path: '/govuk/assets/';
         padding: govuk-spacing(4) 0 govuk-spacing(2) 0;
         border-top: 1px solid govuk-colour("mid-grey", $legacy: "grey-2");
     }
+
+    & + .opss-pagination-link {
+        margin-top: - govuk-spacing(4);
+    }
 }
 
 *[class^="govuk-heading"] + .opss-summary-list {
@@ -172,3 +176,84 @@ $govuk-assets-path: '/govuk/assets/';
     }
 }
 
+.govuk-radios--small.govuk-radios--conditional {
+    .govuk-radios__conditional.govuk-form-group--error {
+        border-left: 4px solid #d4351c;
+    }
+    .govuk-radios__conditional.govuk-radios__conditional--hidden.govuk-form-group--error {//helps with smooth loading
+        display: block !important;
+    }
+}
+
+
+
+
+
+
+
+
+@mixin arrow-right($color) {
+  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" fill="' + $color + '" viewBox="0 0 25 40" xml:space="preserve"><path class="opss-pagination__arrow" d="M0,4.3L16.2,20L0,35.8L4.4,40L25,20L4.5,0L0,4.3z"/></svg>');
+}
+@mixin arrow-left($color) {
+  background-image: url('data:image/svg+xml;utf8,<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="display: block; transform: scale(-1,1)"  x="0px" y="0px" fill="' + $color + '" viewBox="0 0 25 40" xml:space="preserve"><path class="das-pagination__arrow" d="M0,4.3L16.2,20L0,35.8L4.4,40L25,20L4.5,0L0,4.3z"/></svg>');
+}
+
+.opss-pagination-link { //Description: single links pagination with arrow
+    width: 100%;
+    display: block;
+    text-align: right;
+    border-top: 1px solid govuk-colour("mid-grey", $legacy: "grey-2");
+    padding: govuk-spacing(6) 0;
+
+    ul {
+      padding: 0;
+      width: 100%;
+    }
+
+    .opss-pagination-link__wrap {
+      font-size: inherit;
+      display: inline-block;
+      padding: 0 govuk-spacing(4);
+      width: auto;
+
+      .govuk-link {
+        text-decoration: none;
+        display: inline-block;
+
+        &:hover {
+          text-decoration: underline;
+        }
+        &:focus {
+          outline: 0 solid $govuk-focus-colour;
+          outline-offset: 0;
+        }
+
+        span {
+          display: block;
+          @include govuk-font($size: 16);
+        }
+        span:first-child {
+          @include govuk-font($size: 19);
+        }
+      }
+
+      &.opss-pagination-link--next {
+        padding-right: 40px;
+        @include arrow-right(rgba($govuk-link-colour, 0.9));
+        background-position: right center;
+        background-repeat: no-repeat;
+        text-align: right;
+      }
+      &.opss-pagination-link--prev {
+        padding-left: 40px;
+        @include arrow-left(rgba($govuk-link-colour, 0.9));
+        background-position: left center;
+        background-repeat: no-repeat;
+        text-align: left;
+
+        float: left;
+      }
+    }
+
+}
