--- a/app/views/cosmetics-search-designs/search-page-01-error.html
+++ b/app/views/cosmetics-search-designs/search-page-01-error.html
@@ -13,6 +13,20 @@
 
 
 {% block content %}
+
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#by-date-day">All date fields require a value</a> <!-- if more than one, link to the first input with an error -->
+      </li>
+    </ul>
+  </div>
+</div>
+
 <div class="govuk-grid-row">
     <section class="govuk-grid-column-full">
 
@@ -71,12 +85,12 @@
                     <div class="govuk-radios govuk-radios--small govuk-radios--conditional" data-module="govuk-radios">
 
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="by-date" name="dates" type="radio" value="by-date" data-aria-controls="conditional-date-block-1" aria-describedby="by-date-hint">
+                            <input class="govuk-radios__input" id="by-date" name="dates" type="radio" value="by-date" data-aria-controls="conditional-date-block-1" aria-describedby="by-date-hint" checked><!-- *** add 'checked' here: for when the page with error reloads *** -->
                             <label class="govuk-label govuk-radios__label" for="by-date">
                                 Date
                             </label>
                         </div>
-                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden" id="conditional-date-block-1">
+                        <div class="govuk-radios__conditional govuk-radios__conditional--hidden govuk-form-group--error" id="conditional-date-block-1"><!-- *** add error class here: .govuk-form-group--error *** -->
                             <div class="govuk-form-group">
 
                                 <div id="by-date-hint" class="govuk-hint govuk-!-font-size-16">
@@ -84,35 +98,43 @@
                                     For example, 12 08 2019.
                                 </div>
 
+    <span id="dates-error" class="govuk-error-message">
+        <span class="govuk-visually-hidden">Error:</span> All fields require a value
+    </span>
+
                                 <div class="govuk-date-input" id="by-date">
-                                <div class="govuk-date-input__item">
-                                    <div class="govuk-form-group">
-                                    <label class="govuk-label govuk-date-input__label" for="by-date-day">
-                                        Day
-                                    </label>
-                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-day" name="by-date-day" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    <div class="govuk-date-input__item">
+                                        <div class="govuk-form-group">
+                                        <label class="govuk-label govuk-date-input__label" for="by-date-day">
+                                            Day
+                                        </label>
+                                        <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input--error" id="by-date-day" name="by-date-day" type="text" pattern="[0-9]*" inputmode="numeric"><!-- *** error class added here: .govuk-input--error, example *** -->
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="govuk-date-input__item">
-                                    <div class="govuk-form-group">
-                                    <label class="govuk-label govuk-date-input__label" for="by-date-month">
-                                        Month
-                                    </label>
-                                    <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-month" name="by-date-month" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    <div class="govuk-date-input__item">
+                                        <div class="govuk-form-group">
+                                        <label class="govuk-label govuk-date-input__label" for="by-date-month">
+                                            Month
+                                        </label>
+                                        <input class="govuk-input govuk-date-input__input govuk-input--width-2" id="by-date-month" name="by-date-month" type="text" pattern="[0-9]*" inputmode="numeric">
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="govuk-date-input__item">
-                                    <div class="govuk-form-group">
-                                    <label class="govuk-label govuk-date-input__label" for="by-date-year">
-                                        Year
-                                    </label>
-                                    <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="by-date-year" name="by-date-year" type="text" pattern="[0-9]*" inputmode="numeric">
+                                    <div class="govuk-date-input__item">
+                                        <div class="govuk-form-group">
+                                        <label class="govuk-label govuk-date-input__label" for="by-date-year">
+                                            Year
+                                        </label>
+                                        <input class="govuk-input govuk-date-input__input govuk-input--width-4" id="by-date-year" name="by-date-year" type="text" pattern="[0-9]*" inputmode="numeric">
+                                        </div>
                                     </div>
-                                </div>
                                 </div>
 
                             </div>
                         </div>
+
+<!-- *** if one radio sub-group has an error msg and the user then selects the alternative radio option: REMOVE (not hide) '#dates-error' and '#error-summary-title'. *** -->
+
+
                         <div class="govuk-radios__item">
                             <input class="govuk-radios__input" id="by-date-range" name="dates" type="radio" value="by-date-range" data-aria-controls="conditional-date-block-2" aria-describedby="by-date-range-hint">
                             <label class="govuk-label govuk-radios__label" for="by-date-range">
@@ -126,6 +148,11 @@
                                 <div id="by-date-range-hint" class="govuk-hint govuk-!-font-size-16">
                                     The notified dates within a date range. For example, from <span class="opss-no-wrap">01 04 2019</span> to <span class="opss-no-wrap">30 09 2020</span>.
                                 </div>
+
+    <!--span id="dates-error" class="govuk-error-message">
+        <span class="govuk-visually-hidden">Error:</span> The To date cannot precede the From date
+    </span-->
+
                                 <div class="govuk-hint govuk-!-font-size-16">
                                     From<span class="govuk-visually-hidden">:</span>
                                 </div>
