--- a/app/views/cosmetics-search-designs/search-page-01-error.html
+++ b/app/views/cosmetics-search-designs/search-page-01-error.html
@@ -21,7 +21,7 @@
   <div class="govuk-error-summary__body">
     <ul class="govuk-list govuk-error-summary__list">
       <li>
-        <a href="#by-date-day">All date fields require a value</a> <!-- if more than one, link to the first input with an error -->
+        <a href="#by-date-day">Each date field must have a value</a> <!-- if more than one, link to the first input with an error -->
       </li>
     </ul>
   </div>
@@ -95,12 +95,16 @@
 
                                 <div id="by-date-hint" class="govuk-hint govuk-!-font-size-16">
                                     The notified date. <br>
-                                    For example, 12 08 2019.
+                                    For example, 14 08 2019.
                                 </div>
 
     <span id="dates-error" class="govuk-error-message">
-        <span class="govuk-visually-hidden">Error:</span> All fields require a value
+        <span class="govuk-visually-hidden">Error:</span> Each date field must have a value
     </span>
+
+    <!--span id="dates-error" class="govuk-error-message">
+        <span class="govuk-visually-hidden">Error:</span> Dates must follow the correct format
+    </span-->
 
                                 <div class="govuk-date-input" id="by-date">
                                     <div class="govuk-date-input__item">
@@ -132,7 +136,7 @@
                             </div>
                         </div>
 
-<!-- *** if one radio sub-group has an error msg and the user then selects the alternative radio option: REMOVE (not hide) '#dates-error' and '#error-summary-title'. *** -->
+<!-- *** if one radio sub-group has an error msg and the user then selects the alternative radio option: REMOVE (not hide) '#dates-error' and '#error-summary-title' and clear the input fields. (The inputs shouldn't be cleared by clicking the radios unless there are errors). *** -->
 
 
                         <div class="govuk-radios__item">
