--- a/app/views/index.html
+++ b/app/views/index.html
@@ -44,7 +44,7 @@
 
       <h2 class="govuk-heading-m"><abbr>SCNP</abbr>/Cosmetics designs</h2>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a class="govuk-link" href="#">Cosmentics search results page</a></li>
+        <li>Cosmentics search results page</li>
 
           <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link" href="/cosmetics-search-designs/search-page-01.html">#1132 Search page design</a></li>
@@ -56,7 +56,9 @@
       <p class="govuk-body-s">Submitting the keywords refreshes the search results: if the filters have been set, the results incorporate the filter settings and the filters form maintains state (if the page is refreshed during the search). The span (id, opss-filters-txt) is also included in the results overview text.</p>
 
       <p class="govuk-body-s">If the user selects the “clear filters” link (coded as a form button), this refreshes the page results, returns the filters form back to its original state (with radios collapsed) and does not include the span (id, opss-filters-txt) in the results overview text.  </p>
+      <p class="govuk-body-s">The page will first load with all notifications.</p>
       <!--p class="govuk-body-s">(On the 'clear filters' link if using only JS, In the form all aria-expanded="true" returned to "false" and find ".govuk-radios__conditional" all classes and add ".govuk-radios__conditional--hidden").</p-->
+      <p class="govuk-body-s">The page may use a breadcrumb instead of Back link.</p>
 
 
     </div>
