--- a/app/views/cosmetics-search-designs/search-page-01.html
+++ b/app/views/cosmetics-search-designs/search-page-01.html
@@ -42,8 +42,6 @@
 
 <div class="govuk-grid-row">
 
-    <a href="#search-results-section" class="opss-skip-link">Skip past filters to the search results section</a>
-
     <section class="govuk-grid-column-one-third">
         <form class="form" action="#" method="post" novalidate>
             <div class="govuk-form-group">
@@ -218,7 +216,7 @@
                         <label class="govuk-label govuk-body-s" for="results-sort">
                             Sort by
                         </label>
-                        <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort">
+                        <select class="govuk-select govuk-!-margin-bottom-1" id="results-sort" name="sort" aria-controls="results-order">
                             <option value="relevance" selected>Relevance</option>
                             <option value="recent">Newest</option>
                             <option value="oldest">Oldest</option>
@@ -232,7 +230,7 @@
         </div>
 
         <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
+            <div class="govuk-grid-column-full" role="region" aria-label="search-results-list" id="results-order" aria-live="polite">
                 <ul class="govuk-list opss-list--borders">
 
                     <li>
