--- a/app/views/add-product-v4/select-a-product-list-04.html
+++ b/app/views/add-product-v4/select-a-product-list-04.html
@@ -37,7 +37,7 @@
 
                     <div class="govuk-grid-row">
                         <div class="govuk-grid-column-three-quarters">
-                            <ul class="govuk-list govuk-radios govuk-radios--small govuk-list--spaced">
+                            <ul class="govuk-list govuk-radios govuk-radios--small xxxgovuk-list--spaced opss-radio-list--borders">
                                 <li>
 
                                     <div  class="govuk-radios__item">
