--- a/app/views/add-product-v4/start.html
+++ b/app/views/add-product-v4/start.html
@@ -22,8 +22,8 @@
 
       <p>The 'Add Product V4' design flow: </p>
 
-      <a href="#" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
-        Start now
+      <a href="is-this-case-related-to-covid.html" role="button" draggable="false" class="govuk-button govuk-button--start govuk-!-margin-top-2 govuk-!-margin-bottom-8"  data-module="govuk-button">
+        Start: &nbsp;<span style="font-weight: normal;">Open a new case</span>
         <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" role="presentation" focusable="false">
           <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
         </svg>
