--- a/app/views/cosmetics-search-designs/search-page-01.html
+++ b/app/views/cosmetics-search-designs/search-page-01.html
@@ -78,7 +78,7 @@
                             <div class="govuk-form-group">
 
                                 <div id="by-date-hint" class="govuk-hint govuk-!-font-size-16">
-                                    The notified date. <br>
+                                    The date notified. <br>
                                     For example, 14 08 2019.
                                 </div>
 
@@ -122,7 +122,7 @@
                             <div class="govuk-form-group">
 
                                 <div id="by-date-range-hint" class="govuk-hint govuk-!-font-size-16">
-                                    The notified dates within a date range. For example, from <span class="opss-no-wrap">01 04 2019</span> to <span class="opss-no-wrap">30 09 2020</span>.
+                                    The dates notified within a date range. For example, from <span class="opss-no-wrap">01 04 2019</span> to <span class="opss-no-wrap">30 09 2020</span>.
                                 </div>
                                 <div class="govuk-hint govuk-!-font-size-16">
                                     From<span class="govuk-visually-hidden">:</span>
@@ -207,7 +207,7 @@
     <section class="govuk-grid-column-two-thirds" id="search-results-section">
         <div class="govuk-grid-row">
            <div class="govuk-grid-column-two-thirds">
-               <p class="govuk-body">19 products matching keyword(s)
+               <p class="govuk-body"><span id="opss-qty">19</span> products matching keyword(s)
                    <span class="govuk-!-font-weight-bold">dye, hairspray</span>,<span id="opss-filter-txt" class="opss-filter-txt"> using the current filters,</span> were found.</p>
            </div>
            <div class="govuk-grid-column-one-third">
