--- a/app/views/index.html
+++ b/app/views/index.html
@@ -49,7 +49,7 @@
           <ul class="govuk-list govuk-list--bullet">
             <li><a class="govuk-link" href="/cosmetics-search-designs/search-page-01.html">#1132 Search page design</a></li>
             <li><a class="govuk-link" href="/cosmetics-search-designs/search-page-01-error.html">#1132 Search page design with errors</a></li>
-            <li><a class="govuk-link" href="/form-behaviours.txt">#1132 notes about the form(s)</a></li>
+            <li><a class="govuk-link" href="/cosmetics-search-designs/form-behaviours.txt">#1132 notes about the form(s)</a></li>
           </ul>
 
       </ul>
